== 1.0.0 2008-11-23 NOT RELEASED YET

* New completions: rubyforge

== 0.9.0 2008-11-12

* 1 major enhancement:
  * Initial release